<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".GenderSelect">

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="160dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/male_icon"
        android:text="@string/hombre_label"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginTop="160dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/female_icon"
        android:text="@string/mujer_label"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/nextPant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="452dp"
        android:background="@color/colorAccent"
        android:onClick="btnNext"
        android:text="@string/siguiente_label"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>